--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@vue/cli": "^4.5.6",
+    "antd": "^4.6.3",
     "core-js": "^3.6.5",
+    "global": "^4.4.0",
     "register-service-worker": "^1.7.1",
+    "svgo-loader": "^2.2.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
