--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vue/cli": "^4.5.6",
     "antd": "^4.6.3",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "global": "^4.4.0",
     "register-service-worker": "^1.7.1",
     "svgo-loader": "^2.2.1",
@@ -22,6 +23,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/echarts": "^4.6.5",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
