--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "",
+  "name": "charge-account-v2",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,6 +15,7 @@
     "echarts": "^4.9.0",
     "global": "^4.4.0",
     "register-service-worker": "^1.7.1",
+    "serve": "^11.3.2",
     "svgo-loader": "^2.2.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.3",
